crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__constructor__call_init_early_return.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/constructor/call_init_early_return.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Foo (global @1)
      (method init [] []
         (block
            (print "init")
            (return ∅)
            (print "nope"))))
   (var foo (global @2) (call +2 (global Foo @1)))
   (print (call +3 (attr (global foo @2) init))))

----- stderr -----
