crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__constructor__call_init_explicitly.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/constructor/call_init_explicitly.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Foo (global @1)
      (method init [(local this @0) (local arg @1)] []
         (block
            (print (+ (+ "Foo.init(" (local arg @1)) ")"))
            (expr (= (setattr (local this @0) field) "init")))))
   (var foo (global @2) (call +2 (global Foo @1) "one"))
   (expr (= (setattr (global foo @2) field) "field"))
   (var foo2 (global @3) (call +3 (attr (global foo @2) init) "two"))
   (print (global foo2 @3))
   (print (attr (global foo @2) field)))

----- stderr -----
