crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__constructor__early_return.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/constructor/early_return.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Foo (global @1)
      (method init [(local this @0)] []
         (block
            (print "init")
            (return ∅)
            (print "nope"))))
   (var foo (global @2) (call +2 (global Foo @1)))
   (print (global foo @2)))

----- stderr -----
