crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__constructor__missing_arguments.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/constructor/missing_arguments.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Foo (global @1) ∅
      (method init [(local this @0) (local a @1) (local b @2)] []
         (block)))
   (var foo (global @2) (call +2 (global Foo @1) 1.0)))

----- stderr -----
