crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__constructor__return_in_nested_function.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/constructor/return_in_nested_function.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Foo (global @1)
      (method init [(local this @0)] []
         (block
            (fun init (local @1) [] []
               (block
                  (return "bar")))
            (print (call +2 (local init @1))))))
   (print (call +2 (global Foo @1))))

----- stderr -----
